---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-12-05
  Changes:
    - Cleanup code
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-12-05
  Changes:
    - Added support for quality capsules
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-12-05
  Changes:
    - Fix crash before init completes
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-12-03
  Changes:
    - Updated to Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-10-26
  Changes:
    - Fix mod init on character creation
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-09-06
  Changes:
    - Stable release
    - Fix crash when another mod modifies runtime mod settings
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2022-07-29
  Changes:
    - Show deployed bots in item consumption tab
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2022-07-29
  Changes:
    - Optimization and minor tweaks
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2022-07-29
  Changes:
    - Added configurable autodeploy enemy threshold
    - Added shortcut button
    - Added shortcut key
    - Added player config for enemy threshold
    - Added player config for max capsules to deploy
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2022-07-27
  Changes:
    - Initial release