@@ -3,6 +3,8 @@ Version: 2.0.3
 Date: 2025-12-05
   Changes:
     - Cleanup code
+    - Adjust random deployment pattern
+    - Adjust deployment logic
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2025-12-05
